--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prettier": "^1.14.2"
   },
   "dependencies": {
+    "petfinder-client": "0.0.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
   }
