--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,9 +8,12 @@
     "prettier/react"
   ],
   "rules": {
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "jsx-a11y/label-has-for": 0,
+    "no-console": 1
   },
-  "plugins": ["react", "import", "jsx-a11y", "prettier"],
+  "plugins": ["react", "import", "jsx-a11y"],
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module",
@@ -18,13 +21,9 @@
       "jsx": true
     }
   },
-
   "env": {
     "es6": true,
     "browser": true,
     "node": true
-  },
-  "globals": {
-    "React": true
   }
 }
